removed uneeded dependencies in index.html

--- a/index.html
+++ b/index.html
@@ -2,12 +2,18 @@
 <html>
   <head>
     <script src="http://code.jquery.com/jquery.min.js"></script>
-    <script src="http://getbootstrap.com/dist/js/bootstrap.js"></script>
-    <link href="http://getbootstrap.com/dist/css/bootstrap.css" rel="stylesheet" type="text/css" />
     <link rel="import" href="./modal-window.html" />
     <link rel="import" href="./modal-button.html" />
     <meta charset="utf-8">
     <title>Modal Custom Element</title>
+    <style>
+      body {
+        font-family: 'Arial', sans-serif;
+      }
+      h1 {
+        font-size: 24px;
+      }
+    </style>
   </head>
   <body>
 
