--- a/modal-button.html
+++ b/modal-button.html
@@ -1,6 +1,6 @@
 <template id="button-template">
   <style>
-    @import url(http://getbootstrap.com/dist/css/bootstrap.css)
+    @import url(//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.css)
   </style>
 
   <!-- Button trigger modal -->
