--- a/modal-window.html
+++ b/modal-window.html
@@ -1,6 +1,6 @@
 <template id="window-template">
   <style>
-    @import url(http://getbootstrap.com/dist/css/bootstrap.css)
+    @import url(//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.css)
   </style>
 
   <div class="modal fade" id="myModal" role="dialog">
