works on SSL - take 3

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script src="http://code.jquery.com/jquery.min.js"></script>
+    <script src="//code.jquery.com/jquery.js"></script>
     <link rel="import" href="./modal-window.html" />
     <link rel="import" href="./modal-button.html" />
     <meta charset="utf-8">
