added detachedCallbacks and some optimization

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
 
-    <modal-button data-target="#sweetModal">
+    <modal-button target="#sweetModal">
       <span>Toggle Button</span>
     </modal-button>
 
@@ -27,7 +27,7 @@
     </modal-window>
 
 
-    <modal-button data-target="#sourModal">
+    <modal-button target="#sourModal">
       <span>Toggle Another Button</span>
     </modal-button>
 
