--- a/modal-button.html
+++ b/modal-button.html
@@ -10,39 +10,41 @@
 </template>
 
 <script>
-  var buttonImportDoc = document.currentScript.ownerDocument;
+  (function(){
+    var buttonImportDoc = document.currentScript.ownerDocument;
 
-  var proto = Object.create(HTMLElement.prototype, {
-    createdCallback: {
-      value: function() {
-        var t = buttonImportDoc.querySelector('#button-template');
-        var clone = document.importNode(t.content, true);
-        var root = this.createShadowRoot(); 
-        root.appendChild(clone);
+    var proto = Object.create(HTMLElement.prototype, {
+      createdCallback: {
+        value: function() {
+          var t = buttonImportDoc.querySelector('#button-template');
+          var clone = document.importNode(t.content, true);
+          var root = this.createShadowRoot(); 
+          root.appendChild(clone);
 
 
-        var target = this.getAttribute('target');
-        this.modal = document.querySelector(target);
+          var target = this.getAttribute('target');
+          this.modal = document.querySelector(target);
 
-        // Create button hook
-        this.addEventListener('click', this.toggle);
+          // Create button hook
+          this.addEventListener('click', this.toggle);
 
-        console.log('Successfully stamped out modal-button!');
+          console.log('Successfully stamped out modal-button!');
 
+        }
+      },
+      detachedCallback: {
+        value: function() {
+          this.modal.remove();
+          this.removeEventListener('click', this.toggle); 
+          console.log('Successfully removed modal-button and its associated modal!');
+        }
+      },
+      toggle: {
+        value: function(o) {
+          this.modal.toggle();
+        }
       }
-    },
-    detachedCallback: {
-      value: function() {
-        this.modal.remove();
-        this.removeEventListener('click', this.toggle); 
-        console.log('Successfully removed modal-button and its associated modal!');
-      }
-    },
-    toggle: {
-      value: function(o) {
-        this.modal.toggle();
-      }
-    }
-  });
-  document.registerElement('modal-button', {prototype: proto});
+    });
+    document.registerElement('modal-button', {prototype: proto});
+  }());
 </script>
